--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ section {
 	text-align: center;
 	width: 90%;
 	margin: 20px auto 0 auto;
-	background: transparent url("images/title-line.png") repeat-x left 58%;
+	background: transparent url("assets/images/title-line.png") repeat-x left 58%;
 }
 
 .section-title-2 {
